--- a/src/main/resources/templates/profile/profilePage.html
+++ b/src/main/resources/templates/profile/profilePage.html
@@ -60,7 +60,8 @@
 			<div class="row s12">
 				<button class="btn waves-effect waves-light" type="submit"
 					name="save" th:text="#{submit}">
-					Submit <i class="mdi-content-send right"></i>
+					Submit 
+					<i class="mdi-content-send right"></i>
 				</button>
 			</div>
 		</form>
