--- a/src/main/resources/templates/layout/default.html
+++ b/src/main/resources/templates/layout/default.html
@@ -25,7 +25,7 @@
 			</ul>
 		</div>
 	</nav>
-	<div>
+	<div sec:authorize="isAuthenticated()">
 		You are logged as <b sec:authentication="name">with roles</b> 
 		<span sec:authentication="authorities"></span>
 		<form th:action="@{/logout}" method="post" style="display: inline-block">
